--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.mockk:mockk:1.13.4'
+	testImplementation("org.mockito.kotlin:mockito-kotlin:4.1.0")
+	testImplementation 'com.jayway.jsonpath:json-path'
 }
 
 tasks.withType(KotlinCompile).configureEach {
